--- a/.github/workflows/main_lab4li.yml
+++ b/.github/workflows/main_lab4li.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://hongqian25.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_925ae0300d9a42d3bd4776f2f00184fc }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_97bbc199bf2b4311b733819c6d25592b }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_560320d3a1f4434dadd77567fc66b236 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_474239f5b4024a4581e0456661fb2e90 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_925ae0300d9a42d3bd4776f2f00184fc }}/webapp:${{ github.sha }}
+        tags: hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_560320d3a1f4434dadd77567fc66b236 }}/hongqian25/webapp:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'lab4li'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_788a2da38ddc4ed9a2497ef667233f88 }}
-        images: 'hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_925ae0300d9a42d3bd4776f2f00184fc }}/webapp:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_a29b1488098248b189b2428c72f30dde }}
+        images: 'hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_560320d3a1f4434dadd77567fc66b236 }}/hongqian25/webapp:${{ github.sha }}'
