--- a/.github/workflows/main_lab4li.yml
+++ b/.github/workflows/main_lab4li.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://hongqian25.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_560320d3a1f4434dadd77567fc66b236 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_474239f5b4024a4581e0456661fb2e90 }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_189a5f2bf9c34cd2af3aaa09661a9e70 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_b2cbd1f659464afa9d8559b7ab4600cd }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_560320d3a1f4434dadd77567fc66b236 }}/hongqian25/webapp:${{ github.sha }}
+        tags: hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_189a5f2bf9c34cd2af3aaa09661a9e70 }}/hongqian25/hongqian25/webapp:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'lab4li'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_a29b1488098248b189b2428c72f30dde }}
-        images: 'hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_560320d3a1f4434dadd77567fc66b236 }}/hongqian25/webapp:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_8e1bdec01c9943409d2897de80beac8e }}
+        images: 'hongqian25.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_189a5f2bf9c34cd2af3aaa09661a9e70 }}/hongqian25/hongqian25/webapp:${{ github.sha }}'
